@@ -1,0 +1,3 @@
+man_MANS = unshield.1
+
+EXTRA_DIST = $(man_MANS)
