@@ -1,0 +1,75 @@
+.TH UNSHIELD "1" "July 2004" "The SynCE project" "http://www.synce.org"
+.SH NAME
+unshield \- extract CAB files from an InstallShield installer archive
+.SH SYNOPSIS
+unshield [\-c COMPONENT] [\-d DIRECTORY] [\-D LEVEL] [\-g GROUP] [\-h] [\-j] [\-L] [\-n] [\-o] [\-O] [\-r] [\-v] [\-V] c|g|l|t|x CABFILE
+.SH DESCRIPTION
+Unshield extracts CAB files from InstallShield installers, used to 
+install software on Microsoft Windows based machines.
+.SH OPTIONS
+.TP
+\fB\-c\fR COMPONENT
+Only list/extract this component
+.TP
+\fB\-d\fR DIRECTORY
+Extract files to DIRECTORY
+.TP
+\fB\-D\fR LEVEL
+Set debug log level
+0 \- No logging (default)
+1 \- Errors only
+2 \- Errors and warnings
+3 \- Errors, warnings and debug messages
+.TP
+\fB\-g\fR GROUP
+Only list/extract this file group
+.TP
+\fB\-h\fR
+Show help message
+.TP
+\fB\-j\fR
+Junk paths (do not make directories)
+.TP
+\fB\-L\fR
+Make file and directory names lowercase
+.TP
+\fB\-n\fR
+Never overwrite files
+.TP
+\fB\-o\fR
+Always overwrite files
+.TP
+\fB\-O\fR
+Use old compression
+.TP
+\fB\-r\fR
+Save raw data (do not decompress)
+.TP
+\fB\-v\fR
+Be verbose
+.TP
+\fB\-V\fR
+Print version information
+.SS "Commands:"
+.TP
+c
+List components
+.TP
+g
+List file groups
+.TP
+l
+List files
+.TP
+t
+Test files
+.TP
+x
+Extract files
+.SS "Other:"
+.TP
+CABFILE
+The InstallShield installer file to act upon
+.SH "AUTHOR"
+This manual page was adapted by Mark Ellis <mark@mpellis.org.uk>, from
+the skeleton generated by help2man
